--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "Veto-react",
   "version": "0.1.0",
   "private": true,
+  "author": "Armel wanes - Miray Geek",
+  "description": "Logiciel de gestion de stock du cabinet veterinaire Ambalavao",
   "main": "electron/main.js",
   "homepage": "./",
   "dependencies": {
@@ -62,12 +64,13 @@
     "react-icons": "^4.3.1",
     "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
+    "react-redux-undo": "^0.0.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-tag-autocomplete": "^6.3.0",
     "react-timeago": "^6.2.1",
-    "react-to-print": "^2.14.0",
+    "react-to-print": "^2.14.4",
     "redux": "^4.1.1",
     "redux-crud": "^3.3.0",
     "redux-devtools-extension": "^2.13.9",
