--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-data-grid": "^7.0.0-beta.7",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
+    "react-fast-compare": "^3.2.0",
     "react-formik-ui": "^5.5.3",
     "react-hotkeys-hook": "^3.4.4",
     "react-icons": "^4.3.1",
@@ -76,6 +77,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "use-context-selector": "^1.3.9",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
@@ -143,9 +145,10 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "concurrently": "^6.0.0",
     "electron": "^12.0.1",
-    "electron-builder": "^22.10.5",
+    "electron-builder": "^22.14.13",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
