--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.4.1",
     "@wojtekmaj/react-daterange-picker": "^3.3.2",
     "admin-lte": "^3.1.0",
     "axios": "^0.21.4",
