--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "armelgeek5@gmail.com"
   },
   "description": "Logiciel de gestion de stock du cabinet veterinaire Ambalavao",
-  "main": "electron/main.js",
+  "main": "public/electron.js",
   "homepage": "./",
   "dependencies": {
     "@ajoelp/json-to-formdata": "^1.3.1",
