--- a/package.json
+++ b/package.json
@@ -142,8 +142,8 @@
     "electron:start": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && yarn electron .\"",
     "electron:build": "yarn build && electron-builder build --publish never",
     "electron:build:all": "yarn build && electron-builder build --publish never -mwl",
-    "build": "electron-builder build --win --publish never",
-    "deploy": "electron-builder build --win --publish always",
+    "build": "electron-builder build   --em.main=build/electron.js --win --publish never",
+    "deploy": "electron-builder build  --em.main=build/electron.js --win --publish always",
     "publish:win:setup:x64": "electron-builder -w=nsis --x64 -p always",
     "publish:win:setup:x86": "electron-builder -w=nsis --ia32 -p onTagOrDraft",
     "publish:win:setup:arm64": "electron-builder -w=nsis --arm64 -p onTagOrDraft",
