--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Veto-react",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0",
+  "versionCode": 1,
   "author": {
     "name": "Armel Wanes",
     "email": "armelgeek5@gmail.com"
@@ -11,6 +11,7 @@
   "homepage": "./",
   "dependencies": {
     "@ajoelp/json-to-formdata": "^1.3.1",
+    "@armelwanes/magick-array": "^0.0.4",
     "@babel/preset-react": "^7.16.5",
     "@chakra-ui/icons": "^1.0.16",
     "@chakra-ui/react": "^1.6.10",
@@ -38,6 +39,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
+    "chalk": "^5.2.0",
     "class-autobind-decorator": "^3.0.1",
     "cls-hooked": "^4.2.2",
     "commander": "^8.3.0",
@@ -77,7 +79,9 @@
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-addons-update": "^15.6.3",
     "react-app-polyfill": "^3.0.0",
+    "react-auth-kit": "^2.7.1",
     "react-bootstrap": "^1.6.4",
     "react-bottom-scroll-listener": "^5.0.0",
     "react-data-grid": "^7.0.0-beta.7",
@@ -111,7 +115,9 @@
     "yup": "^0.32.11"
   },
   "optionalDependencies": {
-    "dmg-license": "^1.0.9"
+    "node-linux": "^0.1.12",
+    "node-mac": "^1.0.1",
+    "node-windows": "^1.0.0-beta.5"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -131,10 +137,9 @@
       "^.+\\.(js|jsx)$": "babel-jest"
     }
   },
-
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "electron-builder build   --em.main=build/electron.js --win --publish never",
     "eject": "react-scripts eject",
     "test": "jest --watch --verbose",
     "test:update": "jest --verbose --coverage --updateSnapshot",
@@ -142,7 +147,6 @@
     "electron:start": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && yarn electron .\"",
     "electron:build": "yarn build && electron-builder build --publish never",
     "electron:build:all": "yarn build && electron-builder build --publish never -mwl",
-    "build": "electron-builder build   --em.main=build/electron.js --win --publish never",
     "deploy": "electron-builder build  --em.main=build/electron.js --win --publish always",
     "publish:win:setup:x64": "electron-builder -w=nsis --x64 -p always",
     "publish:win:setup:x86": "electron-builder -w=nsis --ia32 -p onTagOrDraft",
@@ -161,7 +165,6 @@
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -190,11 +193,6 @@
       ],
       "icon": "icon/icon.ico"
     }
-  },
-  "optionalDependencies": {
-    "node-linux": "^0.1.12",
-    "node-mac": "^1.0.1",
-    "node-windows": "^1.0.0-beta.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
