--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "express-validator": "^6.12.1",
+    "file-downloader-js": "^1.0.7",
     "formidable": "^1.2.2",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -95,6 +96,7 @@
     "react-month-picker-input": "^1.3.10",
     "react-number-format": "^4.7.3",
     "react-redux": "^7.2.5",
+    "react-redux-modal-flex": "^2.0.3",
     "react-redux-undo": "^0.0.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -103,12 +105,15 @@
     "react-timeago": "^6.2.1",
     "react-to-print": "^2.14.4",
     "react-toastify": "^8.0.0",
+    "react-use-downloader": "^1.2.2",
     "redux": "^4.1.1",
     "redux-crud": "^3.3.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.7",
     "sequelize": "^6.6.5",
+    "styled-components": "^5.3.6",
     "use-context-selector": "^1.3.9",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
@@ -139,7 +144,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "electron-builder build   --em.main=build/electron.js --win --publish never",
+    "build": "electron-builder build   --em.main=electron/electron.js --win --publish never",
     "eject": "react-scripts eject",
     "test": "jest --watch --verbose",
     "test:update": "jest --verbose --coverage --updateSnapshot",
@@ -147,17 +152,17 @@
     "electron:start": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && yarn electron .\"",
     "electron:build": "yarn build && electron-builder build --publish never",
     "electron:build:all": "yarn build && electron-builder build --publish never -mwl",
-    "deploy": "electron-builder build  --em.main=build/electron.js --win --publish always",
-    "publish:win:setup:x64": "electron-builder -w=nsis --x64 -p always",
-    "publish:win:setup:x86": "electron-builder -w=nsis --ia32 -p onTagOrDraft",
-    "publish:win:setup:arm64": "electron-builder -w=nsis --arm64 -p onTagOrDraft",
-    "publish:win:setup:x86_64": "electron-builder -w=nsis --x64 --ia32 -p onTagOrDraft",
-    "publish:linux:deb:x64:always": "electron-builder -l=deb --x64 -p always",
-    "publish:linux:deb:x64": "electron-builder -l=deb --x64 -p onTagOrDraft",
-    "publish:linux:deb:x86": "electron-builder -l=deb --ia32 -p onTagOrDraft",
-    "publish:linux:deb:arm64": "electron-builder -l=deb --arm64 -p onTagOrDraft",
-    "publish:linux:deb:armv7l": "electron-builder -l=deb --armv7l -p onTagOrDraft",
-    "publish:linux:appImage": "electron-builder -l=AppImage -p onTagOrDraft"
+    "deploy": "electron-builder build  --em.main=electron/electron.js --win --publish always",
+    "publish:win:setup:x64": "electron-builder  --em.main=electron/electron.js -w=nsis --x64 -p always",
+    "publish:win:setup:x86": "electron-builder --em.main=electron/electron.js -w=nsis --ia32 -p onTagOrDraft",
+    "publish:win:setup:arm64": "electron-builder --em.main=electron/electron.js -w=nsis --arm64 -p onTagOrDraft",
+    "publish:win:setup:x86_64": "electron-builder --em.main=electron/electron.js -w=nsis --x64 --ia32 -p onTagOrDraft",
+    "publish:linux:deb:x64:always": "electron-builder --em.main=electron/electron.js -l=deb --x64 -p always",
+    "publish:linux:deb:x64": "electron-builder -l=deb --em.main=electron/electron.js --x64 -p onTagOrDraft",
+    "publish:linux:deb:x86": "electron-builder -l=deb --em.main=electron/electron.js --ia32 -p onTagOrDraft",
+    "publish:linux:deb:arm64": "electron-builder -l=deb --em.main=electron/electron.js --arm64 -p onTagOrDraft",
+    "publish:linux:deb:armv7l": "electron-builder -l=deb --em.main=electron/electron.js --armv7l -p onTagOrDraft",
+    "publish:linux:appImage": "electron-builder -l=AppImage --em.main=electron/electron.js -p onTagOrDraft"
   },
   "eslintConfig": {
     "extends": [
