--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "armelgeek5@gmail.com"
   },
   "description": "Logiciel de gestion de stock du cabinet veterinaire Ambalavao",
-  "main": "electron/main.js",
+  "main": "main.js",
   "homepage": "./",
   "dependencies": {
     "@ajoelp/json-to-formdata": "^1.3.1",
@@ -139,21 +139,8 @@
     "test": "jest --watch --verbose",
     "test:update": "jest --verbose --coverage --updateSnapshot",
     "coverage": "jest --verbose --coverage && open ./coverage/lcov-report/index.html",
-    "electron:start": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && yarn electron .\"",
-    "electron:build": "yarn build && electron-builder build --publish never",
-    "electron:build:all": "yarn build && electron-builder build --publish never -mwl",
-    "build": "electron-builder build --win --publish never",
-    "deploy": "electron-builder build --win --publish always",
-    "publish:win:setup:x64": "electron-builder -w=nsis --x64 -p always",
-    "publish:win:setup:x86": "electron-builder -w=nsis --ia32 -p onTagOrDraft",
-    "publish:win:setup:arm64": "electron-builder -w=nsis --arm64 -p onTagOrDraft",
-    "publish:win:setup:x86_64": "electron-builder -w=nsis --x64 --ia32 -p onTagOrDraft",
-    "publish:linux:deb:x64:always": "electron-builder -l=deb --x64 -p always",
-    "publish:linux:deb:x64": "electron-builder -l=deb --x64 -p onTagOrDraft",
-    "publish:linux:deb:x86": "electron-builder -l=deb --ia32 -p onTagOrDraft",
-    "publish:linux:deb:arm64": "electron-builder -l=deb --arm64 -p onTagOrDraft",
-    "publish:linux:deb:armv7l": "electron-builder -l=deb --armv7l -p onTagOrDraft",
-    "publish:linux:appImage": "electron-builder -l=AppImage -p onTagOrDraft"
+    "electron:start": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && yarn electron .\""
+    "electron-build": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
