--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       
       - name: Install Dependencies
         run: |
-          cd veto-react-electron
+          cd real-veto-react
           npm install
 
       - name: Build Electron Application for Windows
