--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,10 @@ jobs:
       run: npm run build
 
     - name: Create Windows Release
-      uses: softprops/action-gh-release@v1
+      uses: actions/upload-release-asset@v1
       with:
-        files: ./dist/win-unpacked/**
-        tag_name: v1.0
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./dist/win-unpacked/officine.exe
+        asset_name: officine.exe
+        asset_content_type: application/octet-stream
         token: ${{ secrets.GITHUB_TOKEN }}
