--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,20 +12,9 @@ jobs:
     - name: install dependencies
       run: npm install
     - name: build
-      run: npm run make
+      run: npm run electron-build
 
-  build_on_mac:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@master
-      with:
-        node-version: 14
-    - name: install dependencies
-      run: npm install
-    - name: build
-      run: npm run make
-      
+ 
   build_on_win:
     runs-on: windows-latest
     steps:
@@ -36,4 +25,4 @@ jobs:
     - name: install dependencies
       run: npm install
     - name: build
-      run: npm run make
+      run: npm run electron-build
