--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "use-context-selector": "^1.3.9",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "cross-env": "^7.0.3"
   },
   "optionalDependencies": {
     "dmg-license": "^1.0.9"
