--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,75 +1,37 @@
 name: Build
-
 on: [push, pull_request]
 
-concurrency:
-  group: ci-${{ github.head_ref }}
-  cancel-in-progress: true
-  
 jobs:
-  Windows:
-    name: Windows
-    runs-on: windows-latest
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      USE_HARD_LINKS: false
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js on windows
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - name: Cache file
-        uses: actions/cache@v2
-        with:
-          path: |
-            node_modules
-            %APPDATA%\npm-cache
-            %LOCALAPPDATA%\electron\Cache
-            %LOCALAPPDATA%\electron-builder\Cache
-          key: ${{ runner.os }}-build-caches-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-
-      - name: Install dependencies
-        run: yarn
-      - name: Release package
-        run: 
-          yarn publish:win:setup:x64
-          yarn publish:win:setup:x86
-          yarn publish:win:setup:arm64
-          yarn publish:win:setup:x86_64
-  Linux:
-    name: Linux
+  build_on_linux:
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       USE_HARD_LINKS: false
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js on linux
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14'
-      - name: Cache file
-        uses: actions/cache@v2
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
+          cache: 'npm'
+      - name: install dependencies
+        run: npm install
+      - name: build
+        run: npm run electron-build
+  
+  build_on_win:
+    runs-on: windows-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      USE_HARD_LINKS: false
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          path: |
-            node_modules
-            %APPDATA%\npm-cache
-            %LOCALAPPDATA%\electron\Cache
-            %LOCALAPPDATA%\electron-builder\Cache
-          key: ${{ runner.os }}-build-caches-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-
-
-      - name: Install dependencies
-        run: yarn
-      - name: Release package
-        run: 
-          
-          yarn publish:linux:deb:x64:always
-          yarn publish:linux:deb:x64
-          yarn publish:linux:deb:x86
-          publish:linux:deb:arm64
-          publish:linux:deb:armv7l
-          publish:linux:appImage
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
+          cache: 'npm'
+      - name: install dependencies
+        run: npm install
+      - name: build
+        run: npm run electron-build
