--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,23 +2,6 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-  build_on_linux:
-    runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      USE_HARD_LINKS: false
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
-          cache: 'npm'
-      - name: install dependencies
-        run: npm install
-      - name: build
-        run: npm run electron-build
-  
   build_on_win:
     runs-on: windows-latest
     env:
@@ -31,6 +14,14 @@ jobs:
           node-version: 14
           registry-url: https://registry.npmjs.org/
           cache: 'npm'
+          path: |
+            node_modules
+            %APPDATA%\npm-cache
+            %LOCALAPPDATA%\electron\Cache
+            %LOCALAPPDATA%\electron-builder\Cache
+          key: ${{ runner.os }}-build-caches-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
       - name: install dependencies
         run: npm install
       - name: build
