--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
     "test:update": "jest --verbose --coverage --updateSnapshot",
     "coverage": "jest --verbose --coverage && open ./coverage/lcov-report/index.html",
     "electron:start": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && yarn electron .\"",
-    "electron-build": "electron-builder -p always"
+    "electron-build": "electron-builder -p always",
+    "clear": "modclean -n default:safe,default:caution"
   },
   "eslintConfig": {
     "extends": [
