--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
     }
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "eject": "react-scripts eject",
     "test": "jest --watch --verbose",
     "test:update": "jest --verbose --coverage --updateSnapshot",
